--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -177,7 +177,29 @@ $( document ).ready(function() {
 			contentType: false,
 			dataType: "html",
 			success: function(data, textStatus, jqXHR){
-				console.log(data)
+				alert(data)
+				window.location.reload()
+			}		
+		});
+	});
+	
+	//LEAVE COMMUNITY
+	$( "[LeaveCommunity]" ).click(function() {
+		var Chash = $(this).attr('hash');
+		console.log(Chash)
+		var data = new FormData();
+		data.append('community_Hash', Chash);
+		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
+		$.ajax({
+			type:'POST',
+			url: '/streampage/LeaveCommunity/',
+			data: data,
+			processData: false,
+			contentType: false,
+			dataType: "html",
+			success: function(data, textStatus, jqXHR){
+				alert(data)
+				window.location.reload()
 			}		
 		});
 	});
@@ -1009,7 +1031,28 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 			contentType: false,
 			dataType: "html",
 			success: function(data, textStatus, jqXHR){
-				console.log(data)
+				alert(data)
+				window.location.reload()
+			}		
+		});
+	});
+	
+	//UNSUBSCRIBE POSTTYPE
+	$( "#UnsubscribePost" ).click(function() {
+		var Phash = $(this).attr('hash');
+		var data = new FormData();
+		data.append('post_Hash', Phash);
+		data.append('csrfmiddlewaretoken', $('input[name=csrfmiddlewaretoken]').val());
+		$.ajax({
+			type:'POST',
+			url: '/streampage/unsubscribePosttype/',
+			data: data,
+			processData: false,
+			contentType: false,
+			dataType: "html",
+			success: function(data, textStatus, jqXHR){
+				alert(data)
+				window.location.reload()
 			}		
 		});
 	});
@@ -1148,6 +1191,18 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 				window.location.reload();
 			}		
 		});
+	});
+	
+	$('button[LeaveCommunity="Yes"]').each(function() {
+		console.log("Yes");
+		myHash = $(this).attr('hash')
+		$('[hash='+myHash+'][JoinCommunity="Yes"]').hide();
+	});
+	
+	$('button[UnsubscribePost="Yes"]').each(function() {
+		console.log("Yes");
+		myHash = $(this).attr('hash')
+		$('[hash='+myHash+'][SubscribePost="Yes"]').hide();
 	});
 });
 
