--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -1225,9 +1225,11 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 		$('[hash='+myHash+'][SubscribePost="Yes"]').hide();
 	});
 	
-	if ($('#profilePhoto').attr('src') != '/static/uploads/profiles/default.jpg'){
-		//$('#profilePhoto').attr('src') = 
-	};
+	$('#profilePhoto').attr('redundant','{{userPhoto}}')
+	if($('#profilePhoto').attr('redundant') != ""){
+		photoDir = $('#profilePhoto').attr('redundant');
+		$('#profilePhoto').attr('src',photoDir);
+	}
 	
 });
 
@@ -1254,11 +1256,7 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 				<li class="nav-item dropdown no-arrow">
 					<a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="mr-2 d-none d-lg-inline text-white-600 small">{{user}}</span>
-						{% if User_communities.userPhoto  %}
-							<img id="profilePhoto" class="img-profile rounded-circle" src="{{ User_communities.userPhoto }}">
-						{% else %}
-							<img id="profilePhoto" class="img-profile rounded-circle" src="{% static 'uploads/profiles/default.jpg' %}">
-						{% endif %}
+						<img id="profilePhoto" class="img-profile rounded-circle" src="{% static 'uploads/profiles/default.jpg' %}" redundant="">
 					</a>
 					<!-- Dropdown - User Information -->
 					<div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
