Profile photo bug is fixed!

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -1226,7 +1226,7 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 	});
 	
 	$('#profilePhoto').attr('redundant','{{userPhoto}}')
-	if($('#profilePhoto').attr('redundant') != ""){
+	if($('#profilePhoto').attr('redundant')){
 		photoDir = $('#profilePhoto').attr('redundant');
 		$('#profilePhoto').attr('src',photoDir);
 	}
