bugs have  been fixed

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -1206,7 +1206,7 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 	});
 	
 	$('#profilePhoto').attr('redundant','{{userPhoto}}')
-	if($('#profilePhoto').attr('redundant')){
+	if($('#profilePhoto').attr('redundant') != "None"){
 		photoDir = $('#profilePhoto').attr('redundant');
 		$('#profilePhoto').attr('src',photoDir);
 	}
