--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -6,12 +6,19 @@
 		<i class="fa fa-plus" aria-hidden="true"></i>
 		Add Community
 	  </button>
+		<div class="small">
+		<form class="form-inline" action="/streampage/communityLocationPageSearch">
+			<input class="form-control mr-sm-2 small" type="search" placeholder="Search Location" aria-label="Search Location" name="keyword">
+			<button class="btn btn-primary my-2 my-sm-0 small" type="submit">Search Location</button>
+		</form>
+	  </div>
 	  <div class="small">
 		<form class="form-inline" action="/streampage/communityPageSearch">
 			<input class="form-control mr-sm-2 small" type="search" placeholder="Search" aria-label="Search" name="keyword">
 			<button class="btn btn-primary my-2 my-sm-0 small" type="submit">Search</button>
 		</form>
 	  </div>
+
 </div>
   <br>
   <br>
@@ -72,6 +79,8 @@
 					<b>Community Point : </b>{{ comm.communityPopularity }}<br>
 					<b>Community Members : </b>{{ comm.communityMembers.all |length}}<br>
 					<b>Community Tags : </b><i><font class="primary">{{ comm.communityTags}}</font></i><br>
+					<b>Community Country: </b>{{ comm.communityCountry }}<br>
+					<b>Community Province: </b>{{ comm.communityLocation }}<br>
 				</div>
 			</div>
 		</div>
