Adding country and province information to list pages and details
Adding country and province information to list pages and details

--- a/mystream/streampage/templates/browse.html
+++ b/mystream/streampage/templates/browse.html
@@ -34,6 +34,8 @@
 					<b>Community Point : </b>{{ comm.communityPopularity }}<br>
 					<b>Community Members : </b>{{ comm.communityMembers.all |length}}<br>
 					<b>Community Tags : </b><i><font class="primary">{{ comm.communityTags}}</font></i><br>
+					<b>Community Country: </b>{{ comm.communityCountry }}<br>
+					<b>Community Province: </b>{{ comm.communityLocation }}<br>
 				</div>
 			</div>
 		</div>
