--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -22,9 +22,13 @@
 			<div class="col-sm-3">
 				<img src="{{ community.communityPhoto }}" width="300" height="300" class="img-thumbnail"><br>
 			</div>
-			<div class="col-sm-9">
+			<div class="col-sm-4">
 				<p id="CommunityMetaData">{{ community.description }}</p>
 				<p>{{ community.communityTags }}</p>
+			</div>
+			<div class="col-sm-4">
+				<p>{{ community.communityCountry }}</p>
+				<p>{{ community.communityLocation }}</p>
 			</div>
 		</div>
 	</div>
