Image annotations is shown on every image on the page. #156
Now, image anno.s will be shown on just the images they saved.

--- a/mystream/streampage/templates/popup.html
+++ b/mystream/streampage/templates/popup.html
@@ -39,19 +39,26 @@
 </h2>
 
 <h2 style="text-align: left;">
-    Let’s Save a Little Water for Everyone
+    Text and Image Annotation
 </h2>
 
 <div class="image" style="position: relative;">
-        <img id="water" src="{% static 'images/water.jpg' %}" >
+        <img src="{% static 'images/animals.jpg' %}" >
 </div>
-
 
 <p>
     Experts say keeping good hygiene would reduce the risk of transmitting and contracting the COVID-19. Indeed clean
     water is our first line of defence during this time of turbulence. Access to clean water is a basic human right and
     no one should fear losing their life because they couldn’t practice the first line of defence, which is hand
-    washing. Kenya faces difficulty in water supply. Majority of Kenyans do not have access to clean water. However,
+    washing.
+</p>
+
+<div class="image" style="position: relative;">
+        <img src="{% static 'images/colors.jpg' %}" >
+</div>
+
+<p>
+    Kenya faces difficulty in water supply. Majority of Kenyans do not have access to clean water. However,
     this is not the time to live everything as deprivation. This is the time to promote solidarity through sharing the
     little resources we have. This crisis needs community more than ever and we need to do what is reasonable to keep
     everyone safe.
